# reprod-multimodal-models

./: .gitignore  README.md  pyproject.toml  train.py
assets/aihub/2019-01-005.멀티모달영상_sample/원천데이터/: INFO.MD
config/: base.yaml
config/datamodule/train_dataset/: aihub_sample.yaml
config/hf_config/: base.yaml
config/hf_config/fusion/: concat.yaml  multimodal_bottleneck.yaml
config/hf_config/head/: linear.yaml  multimodal_bottleneck.yaml
config/module/: lit_module.yaml
config/module/optimizer/: adamw.yaml
config/module/scheduler/: cosine.yaml
src/datamodule/datasets/: aihub_multimodal.py
src/datamodule/processors/: hf_processor.py
src/module/: lit_module.py
src/module/model/: hf_model.py
src/module/model/encoders/: base.py
src/module/model/encoders/common/: simple.py
src/module/model/encoders/text/: eeve2_5_embedding.py
src/module/model/fusion/: concat.py  multimodal_bottleneck.py
src/module/model/head/: linear.py
